src/main.css
/* ... */
body, html {
  margin: 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
  width: 100vw;
  height: 100vh;
}

body {
  display: relative;
  background-color: var(--ash);
  /* background-color: var(--panchamPurple); */
}

body #logo-image {
  /* width: 26%; */
  width: 400px;
  height: auto;
  margin: auto;
  display: block;
  margin: 2% auto;
}

* {
  box-sizing: border-box;
}

input, button {
  outline: none;
}

h1 {
  text-align: center;
  color: white;
  font-size: 5rem;
  padding: 0;
  margin: 0;
  color: var(--charcoal);
}

/* ============================= DETAIL MODAL START ============================= */
.show-detail-modal {
  display: flex;
  justify-content: center;
  align-items: center;

  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  z-index: 50;
}

.hide-detail-modal {
  display: none;
}

.about-modal {
  background-color: rgba(0, 0, 0, 0.5);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 9;
  position: fixed;
/* 
  display: flex;
  justify-content: center;
  align-items: center; */
}

.hide-about-modal {
  display: none;
}

#detail-modal .show-about {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 10;

  position: fixed;
  
  background-color: white;
  height: 500px;
  width: 500px;
  padding: 20px 30px;
  /* text-align: center; */

  border-radius: 20px;
}

#detail-modal .show-about h3 {
  padding: 0;
  margin: 0;
  color: var(--ash);
  font-size: 2rem;
}

.hide-about {
  display: none;
}

/* #detail-modal #about-modal-spacer {
  background-color: var(--fireRed);
  color: white;
  font-size: 3rem;
  padding: 8px 23px 8px 26px;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
  cursor: pointer;
  transform: translateX(-60px);
  visibility: hidden;
} */

/* #detail-modal #about-modal-close {
  background-color: var(--fireRed);
  color: white;
  font-size: 3rem;
  padding: 8px 23px 8px 26px;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
  cursor: pointer;
  transform: translateX(-60px);
  z-index: 10;
  transition-duration: 0.4s;
  position: fixed;
} */

#detail-modal #about-modal-close {
  margin-left: 285px;
  z-index: 9;
}

#detail-modal #about-modal-close:hover {
  transform: translateX(0);
  padding: 40px 23px 40px 26px;
  transition-duration: 0.3s;
}

#detail-modal #about-modal-close:hover div .fa-times {
  transform: rotate(360deg);
  transition-duration: 0.3s;
}

.about-modal-x-show {
  background-color: var(--fireRed);
  color: white;
  font-size: 3rem;
  padding: 8px 23px 8px 26px;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
  cursor: pointer;
  transform: translateX(-60px);
  z-index: 10;
  transition-duration: 0.4s;
  position: fixed;
}

.about-modal-x-hide {
  display: none;
}

/* ============================= DETAIL MODAL END ============================= */

/* ============================= GUIDE MODAL START ============================= */
#guide-modal {
}

#guide-modal .show-guide {
  position: fixed;
  display: grid;
  justify-content: center;
  align-items: center;

  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  z-index: 10;
}

#guide-modal .hide-guide {
  display: none;
}

#guide-modal-background {
  /* background-color: rgba(0, 0, 0, 0.5);
  z-index: 9;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0; */
}

.show-guide-background {
  display: flex;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 9;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.hide-guide-background {
  display: none;
}

#guide-modal-info {
  position: relative;
}

#close-guide-modal {
  display: flex;
  justify-content: center;
  align-items: center;
  
  color: var(--charcoal);
  font-size: 3rem;
  cursor: pointer;
  z-index: 11;
  position: absolute;

  border-radius: 50%;
  background-color: var(--ash);
  width: 4rem;
  height: 4rem;
  padding: 0;
  margin: 0;
  left: 92.5%;
  top: -5.3%;

  transition-duration: 0.3s;
}

#close-guide-modal:hover {
  transform: rotate(180deg) scale(1.2);
  color: white;
}

#guide-modal-information {
  /* display: flex;
  justify-content: center;
  align-items: center;

  margin: auto;
  
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0; 
  z-index: 50;
  height: 500px;
  width: 500px; */

  /* border: red solid 1px; */
}

.show-guide-modal {
  /* display: flex; */
  display: flex;
  justify-content: center;
  align-items: center;

  margin: auto;
  
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0; 
  z-index: 50;
  height: 500px;
  width: 500px;
}

.hide-guide-modal {
  display: none;
}

#guide-modal-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 10;

  position: fixed;
  
  background-color: white;
  height: 500px;
  width: 500px;
  padding: 20px 30px;
  
  border-radius: 20px;
  /* text-align: center; */
}

#guide-modal-info .show-guide-modal-info {
  display: flex;
}

#guide-modal-info .hide-guide-modal-info {
  display: none;
}

#guide-modal-info h3 {
  padding: 0;
  margin: 0;
  color: var(--ash);
  font-size: 2rem;
}

#guide-modal-info .information {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 5px;
  width: 100%;
  justify-content: center;

  cursor: default;
}

#one-hand, #two-hand {
  margin-top: 10px;
  text-align: center;
  color: white;

  padding-bottom: 1.33em;

  display: flex;
  flex-direction: column;
  align-items: center;
}

#one-hand > div, #two-hand > div {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 5px;

  width: 200px;
}
/* ... */

